# sp1-weighted-raffle

contracts/src/fixtures/: fixture.json
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: ec.rs  feistel.rs  main.rs
program/src/merkle/: mod.rs
program/src/raffle/: feistel.rs  mod.rs
script/: Cargo.toml
