[workspace]
[package]
version = "0.1.0"
name = "weighted-raffle-program"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.2"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-std = "0.4.0"
rs_merkle = "1.4.2"
serde = "1.0.204"
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }
sp1-zkvm = "1.0.1"
tiny-keccak = { features=["keccak"], git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
